--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,35 @@ button {
   width: 450px;
   /* margin-right: 40px; */
 }
+
+.random-information {
+  text-align: center;
+  font-weight: bold;
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.box {
+  height: 170px;
+  width: 170px;
+  border: 4px solid #3882f6;
+  border-radius: 12px;
+}
+
+.main-body {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  height: 350px;
+}
+
+.main-body p {
+  display: block;
+}
+
+.box-text {
+  width: 200px;
+  text-align: center;
+  margin-left: -10px;
+  padding-top: 10px;
+}
