--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,33 @@ button {
   font-weight: bold;
   font-size: 22px;
 }
+
+.action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
+
+.action-text p {
+  color: #f9faf8;
+}
+
+.action-text h1 {
+  font-size: 24px;
+}
+
+.blue-box {
+  display: flex;
+  justify-content: space-around;
+  background-color: #3882f6;
+  color: #f9faf8;
+  width: 1000px;
+  padding: 50px;
+
+  border-radius: 10px;
+}
+
+.final-button {
+  border: 2px solid #f9faf8;
+}
