--- a/styles.css
+++ b/styles.css
@@ -180,3 +180,13 @@ button {
 .final-button {
   border: 2px solid #f9faf8;
 }
+
+footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  font-size: 18px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
